# kubelet-deviceplugin-rs

./: .dockerignore  Cargo.toml  Dockerfile  renovate.json
.github/workflows/: ci.yml
codegen/: Cargo.toml
codegen/src/: main.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs  server.rs  transport.rs  v1beta1.rs
crates/proto/src/v1beta1/: proto.rs  types.rs
crates/udev-device-manager/: Cargo.toml  sample_config.toml
crates/udev-device-manager/src/: app.rs  config.rs  config_manager.rs  device_manager.rs  main.rs  reconciler.rs  signal_manager.rs  signals.rs  system.rs  udev.rs  udev_events_manager.rs  udev_manager.rs  utils.rs
crates/udev-device-manager/src/app/: args.rs  device_class.rs  device_registry.rs  device_type.rs
crates/udev-device-manager/src/app/device_class/: device_plugin_server.rs
crates/udev-device-manager/src/config/: device.rs  device_class.rs  device_type.rs  parse.rs  selector.rs  string.rs  watch.rs
crates/udev-device-manager/src/config/device/: labels.rs  selector.rs
crates/udev-device-manager/src/config/device_type/: access.rs  labels.rs
crates/udev-device-manager/src/config_manager/: watcher.rs
crates/udev-device-manager/src/reconciler/: device_actor.rs
crates/udev-device-manager/src/udev/: device.rs  event_stream.rs
crates/udev-device-manager/src/udev_manager/: device.rs
experimental/udev-device-manager/: Cargo.toml
experimental/udev-device-manager/src/: reconciler.rs  signal_manager.rs  udev_manager.rs
experimental/udev-device-manager/src/config/: device_class.rs  selector.rs  string.rs
experimental/udev-device-manager/src/config/device/: access.rs  labels.rs
experimental/udev-device-manager/src/config/device_class/: selector.rs
experimental/udev-device-manager/src/reconciler/: class_actor.rs
experimental/udev-device-manager/src/udev_manager/: device.rs  event_stream.rs
experimental/udev-device-manager/src/utils/: filter_map_bastion_message.rs
proto/: v1beta1.proto
