[package]
name = "codegen"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
duct = "0.13"
prost-build = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic-build = "0.12"
