[package]
name = "k8s-udev-device-manager"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bastion = { git = "https://github.com/bastion-rs/bastion.git", rev = "f1697b388befbf8446f0d8e4217fccad2f79fd10", features = ["tokio-runtime"] }
clap = "3.0.0-beta.2"
futures = "0.3"
lasso = "0.5"
notify = "4"
once_cell = "1"
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
smallvec = { version = "1", features = ["union", "serde"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-udev = "0.6"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"

kubelet-deviceplugin-proto = { path = "../proto" }

[dev-dependencies]
serde_test = "1"
