[package]
name = "k8s-udev-device-manager"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.13"
clap = "3.2.25"
color-eyre = "0.5"
futures = "0.3"
im = "15"
lasso = { version = "0.5", features = ["multi-threaded"] }
notify = "4"
once_cell = "1"
pin-project = "1"
seahash = "4"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.8"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
smallvec = { version = "1", features = ["union", "serde"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-udev = "0.7"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"

kubelet-deviceplugin-proto = { path = "../proto" }

[dev-dependencies]
serde_test = "1"
